fdo#43807: Fix import of drop caps character style

Export works and import has just a little typo.

Change-Id: I570d70423b5a626f21117971fb7eff030eae20af